k8s/secre-game-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-game-deployment
  labels:
    app: secret-game-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secret-game-api
  template:
    metadata:
      labels:
        app: secret-game-api
    spec:
      containers:
      - name: secret-game-api
        image: lebon4031/secret_game_api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
