k8s/secret-game-service.yml
apiVersion: v1
kind: Service
metadata:
  name: secret-game-svc
spec:
  selector:
    app: secret-game-api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5880 
  type: LoadBalancer
