k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-game-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api-sg.everest-consulting.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: secret-game-svc
            port:
              number: 80
